Divicion de proyecto en VS

--- a/Ejercicios/Ejercicios/Ejercicios.csproj
+++ b/Ejercicios/Ejercicios/Ejercicios.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DarkPrometheus\main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DarkPrometheus\main.Designer.cs">
+      <DependentUpon>main.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="freeg99\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
