Menus de parte 1

--- a/Ejercicios/Ejercicios/Ejercicios.csproj
+++ b/Ejercicios/Ejercicios/Ejercicios.csproj
@@ -46,17 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DarkPrometheus\HoraFutura.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DarkPrometheus\HoraFutura.Designer.cs">
-      <DependentUpon>HoraFutura.cs</DependentUpon>
-    </Compile>
     <Compile Include="DarkPrometheus\main.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DarkPrometheus\main.Designer.cs">
       <DependentUpon>main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DarkPrometheus\MenuParte1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DarkPrometheus\MenuParte1.Designer.cs">
+      <DependentUpon>MenuParte1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DarkPrometheus\Parte1\HoraFutura.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DarkPrometheus\Parte1\HoraFutura.Designer.cs">
+      <DependentUpon>HoraFutura.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -72,11 +78,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="DarkPrometheus\HoraFutura.resx">
-      <DependentUpon>HoraFutura.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="DarkPrometheus\main.resx">
       <DependentUpon>main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DarkPrometheus\MenuParte1.resx">
+      <DependentUpon>MenuParte1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DarkPrometheus\Parte1\HoraFutura.resx">
+      <DependentUpon>HoraFutura.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
