Adicion de formulario HoraFutura a MenuParte1, creacion de Clases.Varios, creacion de metodos para centrar Labels, TextBoxs, Buttons

--- a/Ejercicios/Ejercicios/Ejercicios.csproj
+++ b/Ejercicios/Ejercicios/Ejercicios.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clases\Varios.cs" />
     <Compile Include="DarkPrometheus\main.cs">
       <SubType>Form</SubType>
     </Compile>
