--- a/Ejercicios/Ejercicios/Ejercicios.csproj
+++ b/Ejercicios/Ejercicios/Ejercicios.csproj
@@ -100,6 +100,9 @@
     <EmbeddedResource Include="freeg99\Ejercicio parte 1\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="freeg99\main.resx">
+      <DependentUpon>main.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
