--- a/Ejercicios/Ejercicios/Ejercicios.csproj
+++ b/Ejercicios/Ejercicios/Ejercicios.csproj
@@ -53,11 +53,17 @@
     <Compile Include="DarkPrometheus\main.Designer.cs">
       <DependentUpon>main.cs</DependentUpon>
     </Compile>
-    <Compile Include="DarkPrometheus\Parte1\MenuParte1.cs">
+    <Compile Include="DarkPrometheus\MenuParte1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DarkPrometheus\Parte1\MenuParte1.Designer.cs">
+    <Compile Include="DarkPrometheus\MenuParte1.Designer.cs">
       <DependentUpon>MenuParte1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DarkPrometheus\Parte1\Circulos.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DarkPrometheus\Parte1\Circulos.Designer.cs">
+      <DependentUpon>Circulos.cs</DependentUpon>
     </Compile>
     <Compile Include="DarkPrometheus\Parte1\HoraFutura.cs">
       <SubType>UserControl</SubType>
@@ -88,8 +94,11 @@
     <EmbeddedResource Include="DarkPrometheus\main.resx">
       <DependentUpon>main.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DarkPrometheus\Parte1\MenuParte1.resx">
+    <EmbeddedResource Include="DarkPrometheus\MenuParte1.resx">
       <DependentUpon>MenuParte1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DarkPrometheus\Parte1\Circulos.resx">
+      <DependentUpon>Circulos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DarkPrometheus\Parte1\HoraFutura.resx">
       <DependentUpon>HoraFutura.cs</DependentUpon>
